fixed CSS compression for production and fixed Google's feedback that reset password text was too small

--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -37,6 +37,10 @@ html, body
   .btn
     margin-left: 20px
 
+// Paragraph text too small? Use size 16.
+.size16
+  font-size: 16px
+
 //Default Gravatar & Avatar Sizing
 .gravatar .avatar
   display: inline
